refactor: Use the configured time zone in storing date strings in DB
* For API server, always convert the timestamp to date time in the location configured for DB.

* `timezone` query parameter for API server is only used to convert datetime strings to that time zone before sending response
